force-app/main/default/objects/MUSW__Work_Item__c/MUSW__Work_Item__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Breakdown of work and items on a Permit that impacts the total construction valuation</description>
    <label>Work Item</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>