force-app/main/default/objects/MUSW__Work_Item__c/fields/MUSW__Category__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Category__c</fullName>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>