force-app/main/default/objects/MUSW__Work_Item__c/fields/MUSW__Group__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Group__c</fullName>
    <description>Field to group work items in ReviewView page</description>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>