force-app/main/default/objects/MUSW__Work_Item__c/fields/MUSW__Quantity2__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Quantity2__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Area, length or volume of item</inlineHelpText>
    <label>Size</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>