force-app/main/default/objects/MUSW__Work_Item__c/fields/MUSW__Quantity__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Count or Number of Items.</description>
    <inlineHelpText>Number of Items. Used for &quot;EACH&quot; or for multiple dwellings eg. No. of Condo Units</inlineHelpText>
    <label>Quantity</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>