force-app/main/default/objects/MUSW__Work_Item__c/fields/MUSW__Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Sub_Category__c</fullName>
    <label>Sub Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>