force-app/main/default/objects/MUSW__Work_Item__c/fields/MUSW__Summary__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Summary__c</fullName>
    <defaultValue>$RecordType.DeveloperName</defaultValue>
    <description>a field carries work item summaries which concat important fields altogether</description>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>