force-app/main/default/objects/MUSW__Work_Item__c/fields/MUSW__Total_Item_Value__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Total_Item_Value__c</fullName>
    <formula>(NULLVALUE(MUSW__Quantity__c,1) *  NULLVALUE(MUSW__Quantity2__c,1) )  *  NULLVALUE(MUSW__Value_Per_Unit__c,0)</formula>
    <label>Total Item Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>