force-app/main/default/objects/MUSW__Work_Item__c/fields/MUSW__Unit__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Unit__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SQ FT</fullName>
                <default>true</default>
                <label>SQ FT</label>
            </value>
            <value>
                <fullName>FT</fullName>
            </value>
            <value>
                <fullName>EACH</fullName>
            </value>
            <value>
                <fullName>1K BTU</fullName>
            </value>
            <value>
                <fullName>FLAT</fullName>
            </value>
            <value>
                <fullName>GAL</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>$</fullName>
            </value>
            <value>
                <fullName>100 LI</fullName>
            </value>
            <value>
                <fullName>1K CFM</fullName>
            </value>
            <value>
                <fullName>AMP</fullName>
            </value>
            <value>
                <fullName>CU YD</fullName>
            </value>
            <value>
                <fullName>SYSTEM</fullName>
            </value>
            <value>
                <fullName>DEVICE</fullName>
            </value>
            <value>
                <fullName>LIN FT</fullName>
            </value>
            <value>
                <fullName>HEADS</fullName>
            </value>
            <value>
                <fullName>HOUR</fullName>
            </value>
            <value>
                <fullName>INCH</fullName>
            </value>
            <value>
                <fullName>QTY</fullName>
            </value>
            <value>
                <fullName>SQ YD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>