force-app/main/default/objects/MUSW__Work_Item__c/recordTypes/Circuit_Feeder.recordType-meta.xml
<RecordType>
    <fullName>Circuit_Feeder</fullName>
    <active>true</active>
    <label>Circuit Feeder</label>
</RecordType>