force-app/main/default/objects/MUSW__Work_Item__c/recordTypes/Mechanical.recordType-meta.xml
<RecordType>
    <fullName>Mechanical</fullName>
    <active>true</active>
    <label>Mechanical</label>
</RecordType>