force-app/main/default/objects/MUSW__Work_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Category__c</columns>
    <columns>MUSW__Sub_Category__c</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Unit__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>MUSW__Group__c</columns>
    <columns>MUSW__Description__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>